# predictions-platform

./: App.js  README.md  index.css
components/: LaterCard.js  TView.js
programs/predictions_platform/: Cargo.toml
programs/predictions_platform/src/: lib.rs
src/: BettingApp.tsx  index.js
src/components/: ExpiredCard.js  Footer.js  Header.js  LiveCard.js  NextCard.js  PlayModal.js  SideBar.js
